[package]
name = "compiler-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
koopa = "0.0.6"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"
